[package]
name = "rust-re-export-dependencies"
version = "0.1.0"
authors = ["Masaharu TASHIRO <masatsr.kit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
no-reexport = { path = "crates/no-reexport" }
reexport-dependent-types = { path = "crates/reexport-dependent-types" }
reexport-dependent-crate = { path = "crates/reexport-dependent-crate" }
image = "0.23.12"
